--- a/ObfuscarTest/ObfuscarTest.csproj
+++ b/ObfuscarTest/ObfuscarTest.csproj
@@ -73,6 +73,7 @@
     <Compile Remove="Input\AssemblyWithEvents.cs" />
     <Compile Remove="Input\AssemblyWithGenericOverrides.cs" />
     <Compile Remove="Input\AssemblyWithGenericOverrides2.cs" />
+    <Compile Remove="Input\AssemblyWithGeneric.cs" />
     <Compile Remove="Input\AssemblyWithInterfaces.cs" />
     <Compile Remove="Input\AssemblyWithInterfaces2.cs" />
     <Compile Remove="Input\AssemblyWithNestedTypes.cs" />
